Fix spelling errors
Signed-off-by: Marek Pikuła <marek@serenitycode.dev>

--- a/hw/gen/example.rdl
+++ b/hw/gen/example.rdl
@@ -1,6 +1,6 @@
 // SystemRDL 2.0 register description for some_register_map
 // Generated from SpinalHDL RegIf definition. Don't edit.
-// Date: Sat Sep 16 00:44:08 CEST 2023
+// Date: Sat Sep 16 01:35:26 CEST 2023
 
 addrmap some_register_map {
     name = "RDL Example Registers";
@@ -11,18 +11,18 @@ addrmap some_register_map {
 
     reg {
         name = "chip_id_reg";
-        desc = "This register cotains the part # and revision # for XYZ ASIC";
+        desc = "This register contains the part # and revision # for XYZ ASIC";
 
         field {
             name = "rev_num";
-            desc = "This field represents the chips revision number";
+            desc = "This field represents the chip's revision number";
             reset = 0x1;
             sw = r;
         } rev_num[3:0];
 
         field {
             name = "part_num";
-            desc = "This field represents the chips part number";
+            desc = "This field represents the chip's part number";
             reset = 0x1234567;
             sw = r;
         } part_num[31:4];
